distribution record fixed